--- a/web/css/components/_typography.css
+++ b/web/css/components/_typography.css
@@ -93,6 +93,15 @@
     border-left: 2px solid var(--border-color);
 }
 
+/* [NEW] Namo Styling (Centered, Emphasized) */
+.namo {
+    text-align: center;
+    font-weight: 600;
+    color: var(--text-main);
+    margin: 2.5rem 0 1.5rem 0;
+    font-size: calc(1.1rem * var(--text-scale, 1));
+}
+
 /* [NEW] Sadhu Styling (Emphasized, Center) */
 .sadhu {
     text-align: center;
