style: add utility class for hidden elements in _reset.css

--- a/web/css/base/_reset.css
+++ b/web/css/base/_reset.css
@@ -18,3 +18,8 @@ body {
 *::after {
     -webkit-tap-highlight-color: transparent;
 }
+
+/* Utility Classes */
+.hidden {
+    display: none !important;
+}
