--- a/web/css/base/_variables.css
+++ b/web/css/base/_variables.css
@@ -23,7 +23,7 @@
   
   --font-main: "Merriweather", "Times New Roman", serif;
   --font-ui: "Inter", "Segoe UI", sans-serif;
-  --font-mono: "JetBrains Mono", "Fira Code", "Cascadia Code", "SFMono-Regular", Consolas, "Liberation Mono", Menlo, monospace;
+  --font-mono: "Roboto Mono", "JetBrains Mono", "Fira Code", monospace;
   
   --sidebar-width: 280px;
   --header-height: 70px;
