feat: Self-host Roboto Mono font for offline support and improved performance

--- a/web/style.css
+++ b/web/style.css
@@ -2,6 +2,7 @@
 /* --- IMPORTS --- */
 
 /* Base */
+@import "css/base/_fonts.css";
 @import "css/base/_variables.css";
 @import "css/base/_reset.css";
 
