--- a/web/css/base/_fonts.css
+++ b/web/css/base/_fonts.css
@@ -6,7 +6,7 @@
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-100.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-100.woff2') format('woff2');
 }
 /* roboto-mono-100italic - latin_vietnamese */
 @font-face {
@@ -14,7 +14,7 @@
   font-style: italic;
   font-weight: 100;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-100italic.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-100italic.woff2') format('woff2');
 }
 /* roboto-mono-200 - latin_vietnamese */
 @font-face {
@@ -22,7 +22,7 @@
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-200.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-200.woff2') format('woff2');
 }
 /* roboto-mono-200italic - latin_vietnamese */
 @font-face {
@@ -30,7 +30,7 @@
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-200italic.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-200italic.woff2') format('woff2');
 }
 /* roboto-mono-300 - latin_vietnamese */
 @font-face {
@@ -38,7 +38,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-300.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-300.woff2') format('woff2');
 }
 /* roboto-mono-300italic - latin_vietnamese */
 @font-face {
@@ -46,7 +46,7 @@
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-300italic.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-300italic.woff2') format('woff2');
 }
 /* roboto-mono-regular - latin_vietnamese */
 @font-face {
@@ -54,7 +54,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-regular.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-regular.woff2') format('woff2');
 }
 /* roboto-mono-italic - latin_vietnamese */
 @font-face {
@@ -62,7 +62,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-italic.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-italic.woff2') format('woff2');
 }
 /* roboto-mono-500 - latin_vietnamese */
 @font-face {
@@ -70,7 +70,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-500.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-500.woff2') format('woff2');
 }
 /* roboto-mono-500italic - latin_vietnamese */
 @font-face {
@@ -78,7 +78,7 @@
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-500italic.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-500italic.woff2') format('woff2');
 }
 /* roboto-mono-600 - latin_vietnamese */
 @font-face {
@@ -86,7 +86,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-600.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-600.woff2') format('woff2');
 }
 /* roboto-mono-600italic - latin_vietnamese */
 @font-face {
@@ -94,7 +94,7 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-600italic.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-600italic.woff2') format('woff2');
 }
 /* roboto-mono-700 - latin_vietnamese */
 @font-face {
@@ -102,7 +102,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-700.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-700.woff2') format('woff2');
 }
 /* roboto-mono-700italic - latin_vietnamese */
 @font-face {
@@ -110,5 +110,5 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url('../../public/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-700italic.woff2') format('woff2');
+  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-700italic.woff2') format('woff2');
 }
