--- a/web/css/base/_fonts.css
+++ b/web/css/base/_fonts.css
@@ -1,114 +1,36 @@
 /* Path: web/css/base/_fonts.css */
 
-/* roboto-mono-100 - latin_vietnamese */
+/* 
+ * Noto Sans Mono (Variable Font)
+ * Optimized for Web with Subsetting (Latin, Latin-Ext for Pali, Vietnamese)
+ */
+
+/* vietnamese */
 @font-face {
-  font-family: 'Roboto Mono';
+  font-family: 'Noto Sans Mono';
   font-style: normal;
-  font-weight: 100;
+  font-weight: 100 900;
   font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-100.woff2') format('woff2');
+  src: url('/assets/fonts/noto-sans-mono/noto-sans-mono-vietnamese.woff2') format('woff2');
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
-/* roboto-mono-100italic - latin_vietnamese */
+
+/* latin-ext (Includes Pali Characters) */
 @font-face {
-  font-family: 'Roboto Mono';
-  font-style: italic;
-  font-weight: 100;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-100italic.woff2') format('woff2');
-}
-/* roboto-mono-200 - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
+  font-family: 'Noto Sans Mono';
   font-style: normal;
-  font-weight: 200;
+  font-weight: 100 900;
   font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-200.woff2') format('woff2');
+  src: url('/assets/fonts/noto-sans-mono/noto-sans-mono-latin-ext.woff2') format('woff2');
+  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
-/* roboto-mono-200italic - latin_vietnamese */
+
+/* latin (Basic English & Symbols) */
 @font-face {
-  font-family: 'Roboto Mono';
-  font-style: italic;
-  font-weight: 200;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-200italic.woff2') format('woff2');
-}
-/* roboto-mono-300 - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
+  font-family: 'Noto Sans Mono';
   font-style: normal;
-  font-weight: 300;
+  font-weight: 100 900;
   font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-300.woff2') format('woff2');
-}
-/* roboto-mono-300italic - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: italic;
-  font-weight: 300;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-300italic.woff2') format('woff2');
-}
-/* roboto-mono-regular - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-regular.woff2') format('woff2');
-}
-/* roboto-mono-italic - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-italic.woff2') format('woff2');
-}
-/* roboto-mono-500 - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-500.woff2') format('woff2');
-}
-/* roboto-mono-500italic - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: italic;
-  font-weight: 500;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-500italic.woff2') format('woff2');
-}
-/* roboto-mono-600 - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-600.woff2') format('woff2');
-}
-/* roboto-mono-600italic - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: italic;
-  font-weight: 600;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-600italic.woff2') format('woff2');
-}
-/* roboto-mono-700 - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-700.woff2') format('woff2');
-}
-/* roboto-mono-700italic - latin_vietnamese */
-@font-face {
-  font-family: 'Roboto Mono';
-  font-style: italic;
-  font-weight: 700;
-  font-display: swap;
-  src: url('/assets/fonts/roboto-mono/roboto-mono-v31-latin_vietnamese-700italic.woff2') format('woff2');
+  src: url('/assets/fonts/noto-sans-mono/noto-sans-mono-latin.woff2') format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
